# evalbot

./: LICENSE  README.md  evalbot.cabal
src/: Config.hs  IRC.hs  Main.hs  Socket.hs
src/Commands/: DuckDuckGo.hs
