name:                evalbot
version:             0.1
synopsis:            Evaluating IRC bot
-- description:
license:             MIT
license-file:        LICENSE
author:              Steven Oud
maintainer:          soud@protonmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable evalbot
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9, split >=0.2 && <0.3, network >=2.6 && <2.7
                     , HTTP >=4000.2 && <4000.3, process >=1.2 && <1.3
                     , mtl >= 2.2.1
  hs-source-dirs:      src
  default-language:    Haskell2010
