name:                evalbot
version:             0.2
synopsis:            Evaluating IRC bot
-- description:
license:             MIT
license-file:        LICENSE
author:              Steven Oud
maintainer:          soud@protonmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable evalbot
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8 && <4.9, network >=2.6 && <2.7, mtl >=2.2 && <2.3
                     , process >=1.2 && <1.3, split >=0.2 && <0.3, http-client >=0.4 && <0.5
                     , http-client-tls >=0.2 && <0.3, aeson >=0.8 && <0.9, bytestring >=0.10 && <0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
